jena-shex/src/test/files/spec/negativeSyntax/1literalTotaldigitsxsd-integer.shex
<http://a.example/S1> {
   <http://a.example/p1> LITERAL TOTALDIGITS "5"^^<http://www.w3.org/2001/XMLSchema#integer>
}
